@@ -158,6 +158,7 @@ gpg4win_pkg_gnupg2_configure = \
   --with-libassuan-prefix=$(idir) \
   --with-zlib=$(idir) \
   --with-pth-prefix=$(idir) \
+  --with-adns=$(idir) \
   --without-included-gettext \
   --disable-regex
 
@@ -176,8 +177,9 @@ gpg4win_pkg_pinentry_configure = \
 # around the lack of cross compilation support in qt-dev.
 gpg4win_pkg_gpgme_configure = --silent \
   --with-gpg-error-prefix=$(idir) --enable-static \
-  --enable-w32-glib LDFLAGS=-L$(idir)/lib \
-  --enable-w32-qt \
+  `test -n "@HAVE_PKG_GLIB@" && echo "--enable-w32-glib"` \
+  `test -n "@HAVE_PKG_QT@" && echo "--enable-w32-qt"` \
+  LDFLAGS=-L$(idir)/lib \
   QT4_CORE_CFLAGS=\"-DQT_LARGEFILE_SUPPORT -DQT_DLL \
                    -DQT_NO_DEBUG -DQT_CORE_LIB -DQT_THREAD_SUPPORT \
                    -I$(idir)/include/QtCore -I$(idir)/include \
